--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div>
-                    <a href="#" class="footer-logo">Elite Realty Mastery</a>
+                    <a href="#" class="footer-logo">GText & Associates</a>
                     <p class="footer-about">The premier training program for real estate professionals looking to master high-ticket sales and build a sustainable, lucrative career in premium property markets.</p>
                     <div class="footer-social">
                         <a href="#"><span>FB</span></a>
