--- a/index.html
+++ b/index.html
@@ -651,23 +651,26 @@
                     <p class="footer-about">The premier training program for real estate professionals looking to master
                         high-ticket sales and build a sustainable, lucrative career in premium property markets.</p>
                     <div class="footer-social">
-                        <a href="#" class="social-icon" aria-label="Facebook">
+                        <a href="https://www.facebook.com/share/1YTd5GyMVs/?mibextid=wwXIfr" class="social-icon" aria-label="Facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="#" class="social-icon" aria-label="Twitter">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="#" class="social-icon" aria-label="Instagram">
+                        <a href="https://www.instagram.com/gtextandassociates/profilecard/?igsh=MTJmN3M3MzVndHNhbA==" class="social-icon" aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
                         <a href="#" class="social-icon" aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="#" class="social-icon" aria-label="YouTube">
+                        <a href="https://www.youtube.com/@gtextassociates" class="social-icon" aria-label="YouTube">
                             <i class="fab fa-youtube"></i>
                         </a>
                         <a href="#" class="social-icon" aria-label="WhatsApp">
                             <i class="fab fa-whatsapp"></i>
+                        </a>
+                        <a href="https://www.tiktok.com/@gtextandassociates?_t=ZM-8wNe7iiRisQ&_r=1" target="_blank" rel="noopener" title="TikTok">
+                            <i class="fab fa-tiktok"></i>
                         </a>
                     </div>
                 </div>
@@ -685,23 +688,19 @@
                 <div>
                     <h4 class="footer-heading">Resources</h4>
                     <ul class="footer-links">
-                        <li><a href="#">Free Real Estate Guides</a></li>
-                        <li><a href="#">Success Stories</a></li>
-                        <li><a href="#">Blog & Articles</a></li>
-                        <li><a href="#">Past Events</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="https://www.youtube.com/@gtextassociates">Free Real Estate Guides</a></li>
+                        <li><a href="#testimonials">Success Stories</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="footer-heading">Contact Us</h4>
                     <div class="footer-contact-item">
                         <div class="footer-contact-icon">📧</div>
-                        <div class="footer-contact-text">info@eliterealtymastery.com</div>
+                        <div class="footer-contact-text">Info@gtextandassociates.com</div>
                     </div>
                     <div class="footer-contact-item">
                         <div class="footer-contact-icon">📱</div>
-                        <div class="footer-contact-text">+234 800 123 4567</div>
+                        <div class="footer-contact-text">+234 915 535 4748 | +234 813 550 0318</div>
                     </div>
                     <div class="footer-contact-item">
                         <div class="footer-contact-icon">📍</div>
