modify the icon for better uiux

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="about-grid">
           <div class="about-card">
-            <div class="about-card-icon">💰</div>
+            <div class="about-card-icon"><i class="fas fa-money-bill-wave"></i></div>
             <h3>Unlock Premium Commissions</h3>
             <p>
               Learn proven strategies to transition from low-margin properties
@@ -114,7 +114,7 @@
             </p>
           </div>
           <div class="about-card">
-            <div class="about-card-icon">⚠️</div>
+            <div class="about-card-icon"><i class="fas fa-exclamation-triangle"></i></div>
             <h3>Avoid Costly Property Pitfalls</h3>
             <p>
               Discover why cheap properties often hide expensive problems and
@@ -123,7 +123,7 @@
             </p>
           </div>
           <div class="about-card">
-            <div class="about-card-icon">🤖</div>
+            <div class="about-card-icon"><i class="fas fa-robot"></i></div>
             <h3>Master AI-Powered Sales</h3>
             <p>
               Learn cutting-edge AI techniques from Dr. Ope that will
@@ -132,7 +132,7 @@
             </p>
           </div>
           <div class="about-card">
-            <div class="about-card-icon">👑</div>
+            <div class="about-card-icon"><i class="fas fa-crown"></i></div>
             <h3>Elite Client Acquisition</h3>
             <p>
               Develop a proven system for attracting and converting
@@ -141,7 +141,7 @@
             </p>
           </div>
           <div class="about-card">
-            <div class="about-card-icon">🔄</div>
+            <div class="about-card-icon"><i class="fas fa-comments"></i></div>
             <h3>Daily Live Q&A Sessions</h3>
             <p>
               Get personalized guidance during interactive Q&A periods where our
@@ -149,7 +149,7 @@
             </p>
           </div>
           <div class="about-card">
-            <div class="about-card-icon">🌐</div>
+            <div class="about-card-icon"><i class="fas fa-globe"></i></div>
             <h3>Exclusive Network Access</h3>
             <p>
               Join a community of ambitious real estate professionals and build
