--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
                 Challenge Host & Premium Sales Strategist
               </p>
               <p class="speaker-bio">
-                With 17+ years of experience and over $500M in high-value
-                property sales, Jessica has mentored hundreds of agents to break
-                into the luxury market.
+                Eric's systematic approach to attracting high-net-worth clients
+                has been adopted by top-performing agents worldwide, resulting
+                in consistent 7-figure incomes.
               </p>
             </div>
           </div>
@@ -228,9 +228,9 @@
                 Challenge Host & Premium Sales Strategist
               </p>
               <p class="speaker-bio">
-                With 17+ years of experience and over $500M in high-value
-                property sales, Jessica has mentored hundreds of agents to break
-                into the luxury market.
+                A renowned authority on land development issues, Mrs. Adeyinka
+                will reveal the hidden dangers of cheap properties and how to
+                identify truly valuable investments.
               </p>
             </div>
           </div>
@@ -247,9 +247,9 @@
               <h3 class="speaker-name">Eizu Uwaoma</h3>
               <p class="speaker-title">Luxury Property Specialist</p>
               <p class="speaker-bio">
-                Isaac's innovative approach to marketing high-end properties has
-                resulted in record-breaking sales and a client list that
-                includes celebrities and business leaders.
+                Eizu's unique approach to luxury client psychology has generated
+                over $1B in sales. He'll share his proprietary framework for
+                selling to affluent buyers.
               </p>
             </div>
           </div>
@@ -336,9 +336,9 @@
               <h3 class="speaker-name">Jessica Elebiyo</h3>
               <p class="speaker-title">Premium Client Acquisition Strategist</p>
               <p class="speaker-bio">
-                Eric's systematic approach to attracting high-net-worth clients
-                has been adopted by top-performing agents worldwide, resulting
-                in consistent 7-figure incomes.
+                With 17+ years of experience and over $500M in high-value
+                property sales, Jessica has mentored hundreds of agents to break
+                into the luxury market.
               </p>
             </div>
           </div>
@@ -355,9 +355,9 @@
               <h3 class="speaker-name">Isaac Adeoye</h3>
               <p class="speaker-title">Premium Client Acquisition Strategist</p>
               <p class="speaker-bio">
-                Eric's systematic approach to attracting high-net-worth clients
-                has been adopted by top-performing agents worldwide, resulting
-                in consistent 7-figure incomes.
+                Isaac's innovative approach to marketing high-end properties has
+                resulted in record-breaking sales and a client list that
+                includes celebrities and business leaders.
               </p>
             </div>
           </div>
